# tanuky

./: LICENSE  README.md  setup.cfg  setup.py
example/: generate.py
example/src/pages/: example.md
example/templates/: hoge.html
tanuky/: __init__.py  tanuky.py
