[metadata]
name = tanuky
version = attr: tanuky.__version__
author = Laddge
author_email = dev.laddge@gmail.com
description = simple & flexible SSG
url = https://github.com/laddge/tanuky
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
  PyYAML==5.3.1
  Markdown==3.3.6
  Jinja2
  tqdm==4.63.0
